# meditatio

./: .gitignore  README.md  custom.css  main.py  myst.yml  pyproject.toml
calculus/: fourier.ipynb
plugins/: image-zoom.mjs
statistics/: kelmarsh_3_2016_01_01_to_2016_07_01.parquet  simulation.ipynb  simulation_physical.ipynb  skewed_distribution.ipynb  skewed_mle.ipynb  wind_speed.parquet
