[project]
name = "meditatio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter-book>=2.1.5",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "scipy-stubs>=1.18.0.0",
    "seaborn>=0.13.2",
    "teachbooks-zoomies>=0.2.4",
]
